Adding plugin details

--- a/views/mail/login.htm
+++ b/views/mail/login.htm
@@ -1,7 +1,7 @@
 subject = "Your login"
 layout = "default"
 ==
-<h5>Nearly there!</h5>
+<p>Nearly there!</p>
 
 <p>You've requested a passwordless login at {{ base_url }}. Please proceed by clicking this link:</p>
 
@@ -9,10 +9,9 @@ layout = "default"
     Login
 </a>
 
-<p>A few things to notice
-    <ul>
-        <li>This login link will be valid just once and for the next 30 minutes</li>
-        <li>If you click it, you'll be logged in with the browser you are using</li>
-        <li>If you haven't requested the login yourself, just ignore this mail</li>
-    </ul>
-</p>
+<p>A few things to notice</p>
+<ul>
+	<li>This login link will be valid just once and for the next 30 minutes</li>
+	<li>If you click it, you'll be logged in with the browser you are using</li>
+	<li>If you haven't requested the login yourself, just ignore this mail</li>
+</ul>
